--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <style>
-    .diet_form {
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+   .diet_form {
         background: #eaf4ff;
         padding: 10px 30px;
     }
