--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
    .diet_form {
-        background: #eaf4ff;
+        background: red;
         padding: 10px 30px;
     }
     form dl dt {
